--- a/package.json
+++ b/package.json
@@ -9,9 +9,15 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo-google-fonts/inter": "^0.2.0",
     "@expo/vector-icons": "^12.0.0",
     "@loadable/component": "^5.15.0",
+    "@react-navigation/native": "^5.9.4",
+    "@react-navigation/stack": "^5.14.5",
+    "axios": "^0.21.1",
+    "dayjs": "^1.10.6",
     "expo": "~42.0.1",
+    "expo-app-loading": "^1.1.2",
     "expo-status-bar": "~1.0.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
@@ -24,6 +30,7 @@
     "@types/loadable__component": "^5.13.4",
     "@types/react": "~16.9.35",
     "@types/react-native": "~0.63.2",
+    "@types/react-router-native": "^5.1.1",
     "@types/styled-components": "^5.1.11",
     "typescript": "~4.0.0"
   },
