--- a/package.json
+++ b/package.json
@@ -9,12 +9,9 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@expo-google-fonts/inter": "^0.2.0",
     "@expo/vector-icons": "^12.0.0",
     "@loadable/component": "^5.15.0",
-    "@react-navigation/native": "^5.9.4",
-    "@react-navigation/stack": "^5.14.5",
-    "axios": "^0.21.1",
+    "axios": "^0.23.0",
     "dayjs": "^1.10.6",
     "expo": "~42.0.1",
     "expo-app-loading": "^1.1.2",
@@ -22,8 +19,7 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
-    "react-native-web": "~0.13.12",
-    "styled-components": "^5.3.0"
+    "react-native-web": "~0.13.12"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
@@ -31,7 +27,6 @@
     "@types/react": "~16.9.35",
     "@types/react-native": "~0.63.2",
     "@types/react-router-native": "^5.1.1",
-    "@types/styled-components": "^5.1.11",
     "typescript": "~4.0.0"
   },
   "private": true
