--- a/package.json
+++ b/package.json
@@ -12,14 +12,14 @@
     "@expo/vector-icons": "^12.0.0",
     "@loadable/component": "^5.15.0",
     "axios": "^0.23.0",
-    "dayjs": "^1.10.6",
+    "dayjs": "^1.10.7",
     "expo": "~42.0.1",
     "expo-app-loading": "^1.1.2",
     "expo-status-bar": "~1.0.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
-    "react-native-web": "~0.13.12"
+    "react-native-web": "^0.17.5"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
