feat: new UI, add share button

--- a/app.json
+++ b/app.json
@@ -8,21 +8,19 @@
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
-      "backgroundColor": "#0F5156"
+      "backgroundColor": "#1c1c1e"
     },
     "updates": {
       "fallbackToCacheTimeout": 0
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#0F5156"
+        "backgroundColor": "#1c1c1e"
       },
       "package": "darsler.unfoldinggrace"
     },
